--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,8 +17,12 @@ branches:
 install:
   - ps: Install-Product node $env:nodejs_version
   - npm install
+  - npm run build
 
 test_script:
   # Output useful info for debugging.
   - node --version && npm --version
   - cmd: npm test
+
+# Don't actually build.
+build: off
