--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,8 @@ install:
 
 test_script:
   # Output useful info for debugging.
-  - node --version && npm --version
+  - node --version
+  - npm --version
   - cmd: npm test
 
 # Don't actually build.
