--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,11 +17,10 @@ branches:
 install:
   - ps: Install-Product node $env:nodejs_version
   - npm install
-  - npm run build
+  - npm run build:node
 
 test_script:
   # Output useful info for debugging.
-  - node --version
   - npm --version
   - cmd: npm test
 
