--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "interface-prototype": "^1.1.0",
     "mocha": "^4.0.1",
     "sinon": "^4.1.2",
+    "standard": "^10.0.3",
     "webpack": "^3.9.1"
   },
   "dependencies": {
@@ -67,5 +68,13 @@
     "dist",
     "browser.js",
     "browser.js.map"
-  ]
+  ],
+  "standard": {
+    "ignore": [
+      "dist/",
+      "icon/",
+      "browser.js",
+      "test/browser.dist.js"
+    ]
+  }
 }
