--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-preset-stage-3": "^7.0.0-beta.3",
     "babel-register": "^7.0.0-beta.3",
     "babel-runtime": "^7.0.0-beta.3",
+    "bluebird": "^3.5.1",
     "chai": "^4.1.2",
     "express": "^4.16.2",
     "interface-prototype": "^1.1.0",
@@ -73,10 +74,10 @@
   "standard": {
     "parser": "babel-eslint",
     "ignore": [
-      "dist/",
-      "icon/",
-      "browser.js",
-      "test/browser.dist.js"
+      "/dist/",
+      "/icon/",
+      "/browser.js",
+      "/test/browser.dist.js"
     ]
   }
 }
