--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "webpack": "^3.9.1"
   },
   "dependencies": {
-    "stack-trace": "0.0.10"
+    "stack-trace": "0.0.10",
+    "babel-plugin-module-resolver": "^3.0.0"
   },
   "files": [
     "dist",
