--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "npm run build:node & npm run build:browser",
     "build:node": "babel src --out-dir dist --source-maps inline",
-    "build:browser": "webpack",
-    "build:test": "webpack --config webpack.config.test.js",
+    "build:browser": "webpack --mode production",
+    "build:test": "webpack --mode development --config webpack.config.test.js",
     "dev": "npm run build -- --watch",
     "mocha": "mocha --require babel-register",
     "test": "npm run mocha -- test/node.js",
@@ -63,7 +63,8 @@
     "mocha": "^5.0.0",
     "sinon": "^4.1.2",
     "standard": "^11.0.0",
-    "webpack": "^3.9.1"
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9"
   },
   "dependencies": {
     "stack-trace": "0.0.10",
