--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "npm run mocha -- test/node.js",
     "test:dev": "npm run test -- --watch",
     "test:doc": "npm run mocha -- test -R markdown > test/documentation.md --recursive",
-    "prepublish": "npm run build && npm run build:test",
+    "prepare": "npm run build && npm run build:test",
     "codestyle": "standard"
   },
   "repository": {
