--- a/package.json
+++ b/package.json
@@ -62,10 +62,10 @@
     "hoek": "^5.0.3",
     "interface-prototype": "^1.1.1",
     "mocha": "^5.0.0",
-    "sinon": "^4.1.2",
+    "sinon": "^4.5.0",
     "standard": "^11.0.0",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.15"
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
     "babel-plugin-module-resolver": "^3.0.0",
@@ -74,7 +74,8 @@
   "files": [
     "dist",
     "browser.js",
-    "browser.js.map"
+    "browser.js.map",
+    "node.js"
   ],
   "standard": {
     "parser": "babel-eslint",
