--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:browser": "webpack --mode production",
     "build:test": "webpack --mode development --config webpack.config.test.js",
     "dev": "npm run build -- --watch",
-    "mocha": "mocha --require babel-register",
+    "mocha": "mocha --require @babel/register",
     "test": "npm run mocha -- test/node.js",
     "test:dev": "npm run test -- --watch",
     "test:doc": "npm run mocha -- test -R markdown > test/documentation.md --recursive",
@@ -44,18 +44,21 @@
   },
   "homepage": "https://github.com/di-ninja/di-ninja#readme",
   "devDependencies": {
-    "babel-cli": "^7.0.0-beta.3",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.2",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators": "^7.0.0-beta.3",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-runtime": "^7.0.0-beta.3",
-    "babel-preset-env": "^2.0.0-beta.2",
-    "babel-preset-stage-3": "^7.0.0-beta.3",
-    "babel-register": "^7.0.0-beta.3",
-    "babel-runtime": "^7.0.0-beta.3",
     "bluebird": "^3.5.1",
     "chai": "^4.1.2",
     "express": "^4.16.2",
@@ -68,7 +71,8 @@
     "webpack-cli": "^3.0.8"
   },
   "dependencies": {
-    "babel-plugin-module-resolver": "^3.0.0",
+    "@babel/runtime": "^7.0.0",
+    "babel-runtime": "^7.0.0-beta.3",
     "stack-trace": "0.0.10"
   },
   "files": [
