--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
       "/dist/",
       "/icon/",
       "/browser.js",
-      "/test/browser.dist.js"
+      "/test/browser.dist.js",
+      "/example"
     ]
   }
 }
