--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.12.1",
   "description": "The Dependency-Injection Framework for JavaScript NodeJS and Browser",
   "main": "node.js",
-  "module": "browser.js",
+  "module": "module.js",
   "browser": "browser.js",
   "scripts": {
     "build": "npm run build:node & npm run build:browser",
     "build:node": "babel src --out-dir dist --source-maps inline",
-    "build:browser": "webpack --mode production",
+    "build:browser": "rollup -c",
     "build:test": "webpack --mode development --config webpack.config.test.js",
     "dev": "npm run build -- --watch",
     "mocha": "mocha --require @babel/register",
@@ -64,9 +64,15 @@
     "express": "^4.16.2",
     "hoek": "^5.0.3",
     "mocha": "^5.0.0",
+    "rollup": "^1.2.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-url": "^2.2.0",
     "sinon": "^7.0.0",
     "standard": "^12.0.1",
-    "webpack": "^4.15.1",
+    "webpack": "^4.29.5",
     "webpack-cli": "^3.0.8"
   },
   "dependencies": {
